[sandbox] Usability tweaks ....
1. Disabling buttons for flipping / resetting scans in sandbox mode
2. Giving gratuitous tips on sandbox activation

--- a/app/views/notifications/shared/_sandbox.html.haml
+++ b/app/views/notifications/shared/_sandbox.html.haml
@@ -1,15 +1,21 @@
 
-#n-sandbox.modal.regular.hide.fade.row-fluid{ :data => { autohide: 30000 } }
+#n-sandbox.modal.regular.hide.fade.row-fluid{ :data => { autohide: 33000 } }
   .span3
     = image_tag 'notifications/sandbox.png', class: 'big-icon' 
   .span8
-    %p.title.underline= 'Be nice, be precise' 
+    %p.title.underline= 'Activating Sandbox Mode'
     %p
-      You will now be shown real work done by real students 
+      As a new examiner, we would like to see how you identify, diagnose and report 
+      issues in the work students do
     %p
-      Your job is to grade these papers - giving the feedback that you deem fit. 
+      We will therefore now show you <b>previously graded</b> samples of work done by 
+      <b>real students</b>. Your job is to grade these papers - giving the feedback that you deem fit. 
       The aim is to become familiar with the grading panel and to discover your own
       grading style
     %p  
-      As you grade, remember to <b>be nice and precise</b>. In other words, 
-      try and identify the <b>root cause</b> issue in each solution and <b>express it mathematically</b>
+      You have been assigned a <b>mentor</b>. And he/she will be able to see how 
+      you grade. If your mentor agrees with your analysis, then you will go live 
+      and will be assigned new work by real students. And remember - our dictum 
+      while grading is 
+    %p
+      %h3.white= "Be nice, be precise"
