--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -32,6 +32,14 @@ span.MathJax {
   padding: 5px ;
 }
 
+span.btn-shortcut {
+  padding: 2px 4px ; 
+  background: white ;
+  color: $panel-colour ;
+  border-radius: 5px ;
+  font-weight: 500 ;
+}
+
 .carousel:not([id~='how-it-works']), .overlay, .shadow {
   position: absolute ; 
   top: 0px ;
