--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -27,6 +27,7 @@
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
     = render partial: 'notifications/shared/sandbox'
+    = render partial: 'notifications/shared/sandbox-tips'
     - if is_admin
       = render partial: 'modals/examiner/new-examiner'
 
