--- a/app/views/menus/examiner/_workbench.html.haml
+++ b/app/views/menus/examiner/_workbench.html.haml
@@ -28,5 +28,5 @@
     %li
       = simple_link for: "Add Topics", id: 'lnk-mng-topics', icon: 'icon-plus-sign'
     %li
-      = simple_link for: "Add Examiner", id: 'lnk-add-examiner', icon: 'icon-plus-sign'
+      = simple_link for: "Add Examiner", id: 'lnk-add-examiner', icon: 'icon-user'
 
