--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -33,6 +33,7 @@
     = render partial: 'modals/teacher/ws-options-v2'
     = render partial: 'modals/user/upload-scans'
     = render partial: 'modals/examiner/audit'
+    = render partial: 'modals/examiner/new-examiner'
     - unless tc.online
       = render partial: 'modals/user/ask-a-question'
       = render partial: 'modals/teacher/demo-intro'
