--- a/app/views/menus/user/_account.html.haml
+++ b/app/views/menus/user/_account.html.haml
@@ -4,4 +4,7 @@
     = simple_link :for => "Logout", :id => 'lnk-logout', :href => logout_path, :icon => 'icon-off'
   %li
     = simple_link :for => "Edit Account Details", :href => '#m-edit-account', :id => 'lnk-edit-account', :icon => 'icon-edit'
+  - if current_account.loggable_type == 'Teacher'
+    %li
+      = simple_link for: 'Add Teaching Assistants', id: 'lnk-add-examiner', icon: 'icon-user'
 
