--- a/app/views/mailbot/welcome.html.haml
+++ b/app/views/mailbot/welcome.html.haml
@@ -20,7 +20,7 @@
       %li
         Log into your Gradians.com account
       %li
-        Click on <b>Hello, #{obj.first_name}</b> in the top-right corner. This will open a menu
+        Click on <b>Hello, #{@obj.first_name}</b> in the top-right corner. This will open a menu
       %li
         Select <b>Edit Account Details</b> from the menu
       %li
