--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -57,6 +57,9 @@
                     = simple_link :for => 'System Monitor', id: 'lnk-admin-console'
                 %li.dropdown
                   = simple_link :for => "Workbench", as: :dropdown, id: 'm-admin-wb'
+                - if user.mentor_is_teacher
+                  %li
+                    = simple_button for: 'Sandbox Off', toggle: :button, class: 'btn btn-primary', id: 'btn-sandbox-toggle'
                 %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{user.first_name}", as: :dropdown, id: 'm-account'
       #desktop.row-fluid
