--- a/app/views/toolbox/_paginator.html.haml
+++ b/app/views/toolbox/_paginator.html.haml
@@ -1,8 +1,8 @@
 
 -# url & id are variables from the calling view
 
-.pagination.offset1.no-remove{ :id => id }
+.pagination.offset1.no-remove{ id: id } 
   %ul
-    - for pg in [*1..6]
+    - for pg in [*1..10]
       %li
         = link_to pg, "#{url}?page=#{pg}"
