--- a/app/views/shared/grading/_controls.html.haml
+++ b/app/views/shared/grading/_controls.html.haml
@@ -21,8 +21,8 @@
           = simple_button for: 'lip', tooltip: 'Flip Image', id: 'btn-rotate', shortcut: 'F'
       .row-fluid.push-down
         .btn-group.btn-group-vertical{ id: 'fdb-nav' }
-          = simple_button for: 'rev Pg', tooltip: 'Previous Scan', id: 'btn-prev-scan', shortcut: 'P'
-          = simple_button for: 'Prev Q', tooltip: 'Previous Question', id: 'btn-prev-ques', shortcut: 'Y'
-          = simple_button for: 'Next Q', tooltip: 'Next Question', id: 'btn-next-ques', shortcut: 'Z'
-          = simple_button for: 'ext Pg', tooltip: 'Next Scan', id: 'btn-next-scan', shortcut: 'N'
+          = simple_button for: 'Prev Pg', tooltip: 'Previous Scan', id: 'btn-prev-scan', shortcut: '['
+          = simple_button for: 'Prev Q', tooltip: 'Previous Question', id: 'btn-prev-ques', shortcut: '<'
+          = simple_button for: 'Next Q', tooltip: 'Next Question', id: 'btn-next-ques', shortcut: '>'
+          = simple_button for: 'Next Pg', tooltip: 'Next Scan', id: 'btn-next-scan', shortcut: ']'
     .span9{ id: 'fdb-preview-area' }
