[grading-panel]: Shortcuts for perfect/blank/plagiarized solution added ...
But had to get rid of ticks, crosses and ? in the process.
Graders will have to write a comment - which is a pain initially but becomes less
sos because of history

--- a/app/views/shared/grading/_controls.html.haml
+++ b/app/views/shared/grading/_controls.html.haml
@@ -9,10 +9,13 @@
         .btn-group.btn-group-vertical
           = simple_button for: 'Hide', id: 'btn-hide-controls', shortcut: 'I', class: 'btn-success btn-large'
       .row-fluid.push-down
-        .btn-group.btn-group-vertical{ data: { toggle: 'buttons-radio' } } 
-          = simple_button for: 'ick', id: 'btn-ok', shortcut: 'T'
-          = simple_button for: 'Cross', id: 'btn-cross', shortcut: 'X'
-          = simple_button for: 'ow?', id: 'btn-what', shortcut: 'H'
+        .btn-group.btn-group-vertical
+          -#= simple_button for: 'ick', id: 'btn-ok', shortcut: 'T'
+          -#= simple_button for: 'Cross', id: 'btn-cross', shortcut: 'X'
+          -#= simple_button for: 'ow?', id: 'btn-what', shortcut: 'H'
+          = simple_button for: 'erfect', id: 'btn-perfect', shortcut: 'P'
+          = simple_button for: 'lank!', id: 'btn-blank', shortcut: 'B'
+          = simple_button for: 'heated!', id: 'btn-cheated', shortcut: 'C'
       .row-fluid.push-down
         .btn-group.btn-group-vertical
           = simple_button for: 'estore', id: 'btn-fresh-copy', tooltip: 'Restore original scan', shortcut: 'R'
