--- a/app/views/shared/grading/_controls.html.haml
+++ b/app/views/shared/grading/_controls.html.haml
@@ -9,10 +9,12 @@
         .btn-group.btn-group-vertical
           = simple_button for: 'Hide', id: 'btn-hide-controls', shortcut: 'I', class: 'btn-success btn-large'
       .row-fluid.push-down
+        .btn-group.btn-group-vertical{ data: { toggle: :button }}
+          = simple_button for: 'ick', id: 'btn-ok', shortcut: 'T'
+          = simple_button for: 'Cross', id: 'btn-cross', shortcut: 'X'
+          = simple_button for: 'ow?', id: 'btn-what', shortcut: 'H'
+      .row-fluid.push-down
         .btn-group.btn-group-vertical
-          -#= simple_button for: 'ick', id: 'btn-ok', shortcut: 'T'
-          -#= simple_button for: 'Cross', id: 'btn-cross', shortcut: 'X'
-          -#= simple_button for: 'ow?', id: 'btn-what', shortcut: 'H'
           = simple_button for: 'erfect', id: 'btn-perfect', shortcut: 'P'
           = simple_button for: 'lank!', id: 'btn-blank', shortcut: 'B'
           = simple_button for: 'heated!', id: 'btn-cheated', shortcut: 'C'
