--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -2,13 +2,13 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link :for => "Worksheets", :href => '#pane-tc-rc-1', 
-      :id => 'tab-tc-rc-1', :class => 'nopurge-ever'
+    = simple_link for: "Worksheets", href: '#pane-tc-rc-1', 
+      id: 'tab-tc-rc-1', class: 'nopurge-ever'
   %li
-    = simple_link :for => "Overall", :href => '#pane-tc-rc-2', 
-      :id => 'tab-tc-rc-2', :class => 'nopurge-on-inactive nopurge-on-show'
+    = simple_link for: "Overall", href: '#pane-tc-rc-2', 
+      id: 'tab-tc-rc-2', class: 'nopurge-on-inactive nopurge-on-show'
   %li
-    = simple_link :for => "Specific", :href => '#pane-tc-rc-3', :id => 'tab-tc-rc-3'
+    = simple_link for: "Specific", href: '#pane-tc-rc-3', id: 'tab-tc-rc-3'
 
 .tab-content
   #pane-tc-rc-1.tab-pane.scroll.reissue-ajax
