--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -6,7 +6,7 @@
       id: 'tab-tc-rc-1', class: 'nopurge-ever'
   %li
     = simple_link for: "Overall", href: '#pane-tc-rc-2', 
-      id: 'tab-tc-rc-2', class: 'nopurge-on-inactive nopurge-on-show'
+      id: 'tab-tc-rc-2', class: 'nopurge-on-inactive' 
   %li
     = simple_link for: "Specific", href: '#pane-tc-rc-3', id: 'tab-tc-rc-3'
 
