--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -18,6 +18,7 @@
     = render partial: 'modals/student/enroll'
     = render partial: 'modals/student/enrollment-confirm'
     = render partial: 'modals/user/ask-a-question'
+    = render partial: 'modals/student/dispute'
   #notifications
     = render partial: 'notifications/student/enrollment-blocked'
     = render partial: 'notifications/student/enrolled-already'
