--- a/app/views/mailbot/daily_digest.html.haml
+++ b/app/views/mailbot/daily_digest.html.haml
@@ -5,9 +5,9 @@
 %p
   %ul
     %li
-      <b>Grading</b>: @tbd_g 
+      <b>Grading</b>: "#{@tbd_g}"
     %li
-      <b>Disputes</b>: @tbd_d
+      <b>Disputes</b>: "#{@tbd_d}"
 %p
   Pending grading work will show up when you login
 %p
