--- a/app/views/menus/teacher/_per-question.html.haml
+++ b/app/views/menus/teacher/_per-question.html.haml
@@ -1,7 +1,7 @@
 
-%ul.dropdown-menu.dropdown-inverse#per-question{ :role => :menu }
+%ul.dropdown-menu.dropdown-inverse#per-question{ role: :menu } 
   %li
-    = simple_link :for => 'Add to Favourites', :id => 'lnk-like-question', 
-    :icon => 'icon-thumbs-up', :remote => true, :url => { :self => "like.json?id=:a" }
+    = simple_link for: 'Add to Favourites', id: 'lnk-like-question', 
+    icon: 'icon-thumbs-up', remote: true
   %li
-    = simple_link :for => 'Report issue(s)', :id => 'lnk-audit-question', :icon => 'icon-warning-sign'
+    = simple_link for: 'Report issue(s)', id: 'lnk-audit-question', icon: 'icon-warning-sign'
