[Dispute]: Now requiring justification from student on why he/she ...
... thinks the question should be regraded

The reason is then made available to the grader who can accept / reject
the request

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -502,7 +502,7 @@ span.btn-shortcut {
     border-radius: 0px ;
     font : { 
       size: 12px ;
-      family: "Tahoma" ; 
+      weight: 300 ;
     } 
     color: white ; 
     line-height: 15px ;
