--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -29,6 +29,7 @@
     = render partial: 'notifications/shared/first-scan'
     = render partial: 'notifications/shared/sandbox'
     = render partial: 'notifications/shared/sandbox-tips'
+    = render partial: 'notifications/shared/dispute-reason'
     - if is_admin
       = render partial: 'modals/examiner/new-examiner'
 
