--- a/app/views/students/_rc.html.haml
+++ b/app/views/students/_rc.html.haml
@@ -9,7 +9,7 @@
   #pane-st-rc-1.tab-pane
   #pane-st-rc-2.tab-pane
     .row-fluid.navbar.purge-skip
-      = simple_link for: 'Regrade', id: 'lnk-regrade-request', class: 'btn btn-inverse', remote: true
+      = simple_button for: 'Regrade', id: 'btn-regrade', class: 'btn-inverse pull-left'
       .btn-group.pull-right
         = simple_button for: 'Read Solution', 
           id: 'btn-show-solution', toggle: :button
