--- a/app/views/menus/examiner/_per-dispute.html.haml
+++ b/app/views/menus/examiner/_per-dispute.html.haml
@@ -1,6 +1,8 @@
 
 %ul.dropdown-menu.dropdown-inverse.slim{ id: 'm-dispute', role: :menu }
   %li
+    = simple_link for: 'See student comment', id: 'lnk-dispute-reason', remote: true
+  %li
     = simple_link for: 'Reject', id: 'lnk-reject-dispute', remote: true, icon: 'icon-trash'
   %li
     = simple_link for: 'Accept', id: 'lnk-accept-dispute', remote: true, icon: 'icon-plus-sign'
