another big commit with back end framework mostly

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1421,8 +1421,12 @@ li.split {
     border: thin dashed ;
   }
 
-  #purchase_payment_type {
-//    width: 206px ;  
+  #payment_type {
+    width: 206px ;  
+  }
+  
+  #payment_card_verification {
+    width: 42px ;  
   }
   
   #img-payment-icons {
