--- a/app/views/notifications/shared/_dispute-reason.html.haml
+++ b/app/views/notifications/shared/_dispute-reason.html.haml
@@ -1,5 +1,5 @@
 
-#n-dispute-reason.modal.regular.hide.fade.row-fluid{ data: { autohide: 15000 } } 
+#n-dispute-reason.modal.regular.hide.fade.row-fluid{ data: { autohide: :never } } 
   .span2
   .span9
     %p.title.underline= 'Here is why'
