--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -623,7 +623,10 @@ span.btn-shortcut {
     .badge { background-color: white ; } 
   } 
   &.green {
-    .badge { background-color: $green ; }
+    .badge { 
+      background-color: $green ; 
+      color: white ; 
+    }
   } 
 
   > .dropdown { 
