--- a/app/views/menus/examiner/_per-dispute.html.haml
+++ b/app/views/menus/examiner/_per-dispute.html.haml
@@ -1,7 +1,7 @@
 
 %ul.dropdown-menu.dropdown-inverse.slim{ id: 'm-dispute', role: :menu }
   %li
-    = simple_link for: 'See student comment', id: 'lnk-dispute-reason', remote: true
+    = simple_link for: 'Disputed because ...', id: 'lnk-dispute-reason', remote: true, icon: 'icon-comment'
   %li
     = simple_link for: 'Reject', id: 'lnk-reject-dispute', remote: true, icon: 'icon-trash'
   %li
