Pagination should be auto-invoked
There is enough information to realize this behaviour. So why not?

We know at any given point in time which (horizontal) tab was clicked
and whether or not the response was pagination ( json.last_pg != nil )

--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -4188,7 +4188,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
   }
 }
 
-.pagination {
+.pagination, .paginator {
   margin: 0px 0px 20px 0px ; 
   ul {
     display: inline-block;
