--- a/app/views/toolbox/_paginator.html.haml
+++ b/app/views/toolbox/_paginator.html.haml
@@ -1,7 +1,7 @@
 
 -# url & id are variables from the calling view
 
-.pagination.offset1.no-remove{ id: id } 
+.paginator.offset1.no-remove{ id: id } 
   %ul
     - for pg in [*1..10]
       %li
