--- a/app/views/menus/teacher/_per-ws.html.haml
+++ b/app/views/menus/teacher/_per-ws.html.haml
@@ -3,3 +3,5 @@
   %li
     = simple_link for: "Download PDF", id: 'lnk-ws-download', icon: 'icon-download',
     url: { self: "#{Gutenberg['server']}/mint/:a/document.pdf" }
+  %li
+    = simple_link for: 'View Disputes', id: 'lnk-exam-disputes'
