Minor edits to mail sent to students when worksheet graded

--- a/app/views/mailbot/worksheet_graded.html.haml
+++ b/app/views/mailbot/worksheet_graded.html.haml
@@ -28,17 +28,16 @@
   Other than these, we do not care for much else - least of all the final answer. 
   If you understand the underlying Math, you will eventually get to the answer
 
-%h3="Where can I see my scores?"
+%h3="What if I don't like my grade?"
 %p
-  You can't - because we do not show them to you. Your teacher, however, can. And if you really 
-  must know, you can always ask him/her. That said, we do hope you will resist the urge
+  You can always contest the grade that you got. Look for a <b>Regrade</b> button when 
+  viewing the report card for an assignment 
 %p
-  And here is why. Our aim is not to rank order you. Nor should you rank order yourself - which 
-  you would be able to do if you knew your scores and those of your friends
+  Know that you can contest the grade only once and must provide a reason for why you think 
+  the question should be re-graded. The grader could then decide to accept or reject your request
 %p  
-  Rather, our aim is to help you relax about Maths (its possible) and to use our feedback 
-  to improve. As we like to say at Gradians.com - <b>Grades will happen</b>. And they will.
-  Take it from people who were once in school just like you 
+  Should the grader accept to regrade, your new - and final - score could be lower, higher or
+  the same as before 
 %p
   With best wishes,
 %p
