Do not autohide sandbox enabled notification

--- a/app/views/notifications/shared/_sandbox.html.haml
+++ b/app/views/notifications/shared/_sandbox.html.haml
@@ -1,5 +1,5 @@
 
-#n-sandbox.modal.regular.hide.fade.row-fluid{ :data => { autohide: 33000 } }
+#n-sandbox.modal.regular.hide.fade.row-fluid{ data: { autohide: :never } } 
   .span3
     = image_tag 'notifications/sandbox.png', class: 'big-icon' 
   .span8
