--- a/app/views/teachers/_deepdive.html.haml
+++ b/app/views/teachers/_deepdive.html.haml
@@ -1,13 +1,13 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Group", :id => "tab-dive-1", :href => '#pane-dive-1'
+    = simple_link for: "Group", id: "tab-dive-1", href: '#pane-dive-1'
   %li
-    = simple_link :for => "By Topic", :id => "tab-dive-2",
-      :href => '#pane-dive-2', :class => 'nopurge-ever'
+    = simple_link for: "By Topic", id: "tab-dive-2",
+      href: '#pane-dive-2', :class => 'nopurge-ever'
   %li
-    = simple_link :for => "By Student", :id => "tab-dive-3",
-      :href => '#pane-dive-3', :class => 'nopurge-ever'
+    = simple_link for: "By Student", id: "tab-dive-3",
+      href: '#pane-dive-3', :class => 'nopurge-ever'
 
 .tab-content
   #pane-dive-1.tab-pane
@@ -16,8 +16,8 @@
     .tabbable.tabs-left
       %ul.nav.nav-tabs.span4.purge-skip.lock
         - Vertical.all.each do |m|
-          %li{ :marker => "#{m.id}" }
-            = simple_link :for => "#{m.name}", :href => "#deepdive-topics", :id => "tab-deepdive-#{m.id}"
+          %li{ marker: "#{m.id}" }
+            = simple_link for: "#{m.name}", href: "#deepdive-topics", id: "tab-deepdive-#{m.id}"
       .tab-content
         #deepdive-topics
 
