--- a/app/views/modals/teacher/_ws-options-v2.html.haml
+++ b/app/views/modals/teacher/_ws-options-v2.html.haml
@@ -11,9 +11,8 @@
     .span7
       %h2= "I will"
       %p
-        A single downloadable PDF will be created in your account. You will have to print it out
-        and give to students
-        
+        A single downloadable PDF - containing personalized worksheets for each student - will be created. 
+        You will have to print it out and distribute amongst students
 
   .row-fluid.ws-option{ id: 'as-homework' }
     .span2.offset1
