--- a/app/views/tutorials/teacher/exb/_one.html.haml
+++ b/app/views/tutorials/teacher/exb/_one.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'wsb-milestone-1', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'left-1' } }
+%ol.hide{ id: 'exb-milestone-1', data: { onwards: :true }}
+  %li{ data: { id: 'left-1' } }
     %h6= "#1"
     %p
       <b>Select a quiz</b> from the list of quizzes shown here
