--- a/app/views/tutorials/teacher/exb/_two.html.haml
+++ b/app/views/tutorials/teacher/exb/_two.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'wsb-milestone-2', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'wsb-ul-milestone-2' } }
+%ol.hide{ id: 'exb-milestone-2', data: { onwards: :true }}
+  %li{ data: { id: 'exb-ul-milestone-2' } }
     %h6= "#2"
     %p
       <b>Select a group</b> from the list of groups shown here
