--- a/app/views/menus/teacher/_per-qz.html.haml
+++ b/app/views/menus/teacher/_per-qz.html.haml
@@ -3,14 +3,14 @@
 
 %ul.dropdown-menu.dropdown-inverse#per-quiz{ :role => :menu }
   %li
-    = simple_link for: "Edit Quiz", id: 'lnk-edit-qz', icon: 'icon-edit'
+    = simple_link for: 'Edit Quiz', id: 'lnk-edit-qz', icon: 'icon-edit'
   - unless online_instructor  
     %li
-      = simple_link for: "New Worksheet", id: 'lnk-wsb-new', icon: 'icon-plus-sign'
+      = simple_link for: 'New Assignment', id: 'lnk-exb-new', icon: 'icon-plus-sign'
     %li
-      = simple_link for: "List Worksheets", id: 'lnk-wsb-existing', icon: 'icon-list'
+      = simple_link for: 'Past Assignments', id: 'lnk-exb-existing', icon: 'icon-list'
     %li
-      = simple_link for: "Sample Worksheet", id: 'lnk-download-sample', icon: 'icon-file',
+      = simple_link for: 'Sample Assignment', id: 'lnk-download-sample', icon: 'icon-file',
       url: { self: "#{Gutenberg['server']}/mint/:a/sample/document.pdf" }
   %li
     = simple_link for: "Download Solution (PDF)", id: 'lnk-download-solution', 
