--- a/app/views/tutorials/teacher/exb/_three.html.haml
+++ b/app/views/tutorials/teacher/exb/_three.html.haml
@@ -1,6 +1,6 @@
 
-%ol.hide{ :id => 'wsb-milestone-3', :data => { :onwards => :true }}
-  %li{ :data => { :id => 'wsb-div-milestone-3' } }
+%ol.hide{ id: 'exb-milestone-3', data: { onwards: :true }}
+  %li{ data: { id: 'exb-div-milestone-3' } }
     %h6= "#2"
     %p
       Next <b>pick students</b> for whom the worksheet is to be made
@@ -8,7 +8,7 @@
       Students are listed by the <b>Group</b> the are part of. 
       Select a group and then select students. To <b>select all</b> students 
       in a group, press <i class='icon-list'></i>
-  %li{ :data => { :id => 'build-worksheet', :options => 'tipLocation:top;nubPosition:bottom' } }
+  %li{ data: { id: 'build-worksheet', options: 'tipLocation:top;nubPosition:bottom' } }
     %h6= "#3"
     %p
       When you are done, click the <b>Make PDF</b> <i class='icon-wrench'></i> button
