Some additional references to worksheet builder replaced with exam builder

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -31,7 +31,7 @@
 - content_for :modals do
   #modals
     = render partial: 'modals/user/account'
-    = render partial: 'modals/teacher/ws-options-v2'
+    = render partial: 'modals/teacher/exb_1'
     = render partial: 'modals/user/upload-scans'
     = render partial: 'modals/examiner/audit'
     = render partial: 'modals/examiner/new-examiner'
