--- a/app/views/modals/teacher/_exb_1.html.haml
+++ b/app/views/modals/teacher/_exb_1.html.haml
@@ -1,5 +1,5 @@
 
-#m-ws-options.modal.fade.wide{ role: :dialog } 
+#m-exbopts-1.modal.fade.wide{ role: :dialog } 
   .row-fluid
     %h1.span8.offset1= "Who will do the printing?" 
     .span3
