--- a/app/views/teachers/_exb-sektions.html.haml
+++ b/app/views/teachers/_exb-sektions.html.haml
@@ -20,7 +20,7 @@
         .btn-group
           = simple_link for: 'Make PDF', icon: 'icon-cog', id: 'lnk-build-ws', class: 'btn btn-inverse'
         .hide.ws-option
-          = f.input :ws_type, input_html: { name: :ws_type }
+          = f.input :etype, input_html: { name: :etype }
           = f.input :deadline, input_html: { name: :deadline } 
           = f.input :duration, input_html: { name: :duration } 
 
