--- a/app/views/modals/teacher/_exb_1.html.haml
+++ b/app/views/modals/teacher/_exb_1.html.haml
@@ -5,7 +5,7 @@
     .span3
       = simple_button for: 'Make PDF', icon: 'icon-cog'
       
-  .row-fluid.ws-option{ id: 'as-classwork' }
+  .row-fluid.exbopt{ id: 'as-classwork' }
     .span2.offset1
       = image_tag 'quick-trial/printer.png'
     .span7
@@ -14,7 +14,7 @@
         A single downloadable PDF - containing personalized worksheets for each student - will be created. 
         You will have to print it out and distribute amongst students
 
-  .row-fluid.ws-option{ id: 'as-homework' }
+  .row-fluid.exbopt{ id: 'as-homework' }
     .span2.offset1
       = image_tag "notifications/home.png"
     .span7
