--- a/app/views/teachers/_exb-sektions.html.haml
+++ b/app/views/teachers/_exb-sektions.html.haml
@@ -19,7 +19,7 @@
           = simple_button icon: 'icon-list', id: 'select-all-for-quiz', tooltip: 'Select All', placement: :right
         .btn-group
           = simple_link for: 'Make PDF', icon: 'icon-cog', id: 'lnk-build-ws', class: 'btn btn-inverse'
-        .hide.ws-option
+        .hide.exbopt
           = f.input :etype, input_html: { name: :etype }
           = f.input :deadline, input_html: { name: :deadline } 
           = f.input :duration, input_html: { name: :duration } 
