[Work allocation]: First draft of changes to allow explicit specification ...
... by the teacher of how scans should be distributed amongst TAs ( if any )

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1427,3 +1427,12 @@ li.split {
     }
   }
 }
+
+table { 
+  td.y-label { 
+    text-align: center ;
+  }
+  td.x-label {
+    padding-right: 10px ;
+  }
+}
