--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -32,6 +32,8 @@
   #modals
     = render partial: 'modals/user/account'
     = render partial: 'modals/teacher/exb_1'
+    = render partial: 'modals/teacher/exb_2'
+    = render partial: 'modals/teacher/exb_3'
     = render partial: 'modals/user/upload-scans'
     = render partial: 'modals/examiner/audit'
     = render partial: 'modals/examiner/new-examiner'
@@ -56,6 +58,7 @@
     = render partial: 'notifications/teacher/compiled'
     = render partial: 'notifications/teacher/edit-quiz'
     = render partial: 'notifications/teacher/enrolled'
+    = render partial: 'notifications/teacher/no-apprentice'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
     = render partial: 'notifications/shared/question-received'
