--- a/app/views/menus/teacher/_per-ws.html.haml
+++ b/app/views/menus/teacher/_per-ws.html.haml
@@ -4,4 +4,8 @@
     = simple_link for: "Download PDF", id: 'lnk-ws-download', icon: 'icon-download',
     url: { self: "#{Gutenberg['server']}/mint/:a/document.pdf" }
   %li
-    = simple_link for: 'View Disputes', id: 'lnk-exam-disputes'
+    = simple_link for: 'View Disputes', id: 'lnk-exam-disputes', icon: 'icon-comment'
+  %li
+    = simple_link for: 'Distribution Scheme', id: 'lnk-def-dist-scheme', icon: 'icon-inbox'
+  %li
+    = simple_link for: 'Redistribute', id: 'lnk-exam-redistribute', icon: 'icon-repeat'
