Enable / disable regrade-button depending on whether ...
... regrade deadline has passed or not. Issue meaningful notifications too

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -24,6 +24,8 @@
     = render partial: 'notifications/student/enrollment-blocked'
     = render partial: 'notifications/student/enrolled-already'
     = render partial: 'notifications/student/sektion-not-found'
+    = render partial: 'notifications/student/regrade-disallowed'
+    = render partial: 'notifications/student/regrade-deadline'
 
 !!!5
 
