--- a/app/views/menus/teacher/_per-qz.html.haml
+++ b/app/views/menus/teacher/_per-qz.html.haml
@@ -8,7 +8,7 @@
     %li
       = simple_link for: 'New Assignment', id: 'lnk-exb-new', icon: 'icon-plus-sign'
     %li
-      = simple_link for: 'Past Assignments', id: 'lnk-exb-existing', icon: 'icon-list'
+      = simple_link for: 'List Assignments', id: 'lnk-exb-existing', icon: 'icon-list'
     %li
       = simple_link for: 'Sample Assignment', id: 'lnk-download-sample', icon: 'icon-file',
       url: { self: "#{Gutenberg['server']}/mint/:a/sample/document.pdf" }
