- functionality for purchase, transfer and refund completed

--- a/app/views/modals/admin/_create-customer.html.haml
+++ b/app/views/modals/admin/_create-customer.html.haml
@@ -1,7 +1,7 @@
 
 - school = School.new 
 
-#m-cust-create-form.modal.regular.fade.row-fluid
+#m-school-create-form.modal.regular.fade.row-fluid
   .span2
     = image_tag 'notifications/add-user.png', :class => 'big-icon offset1'
   .span8
