--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -1,6 +1,7 @@
 
 -# Customized markers 
 - student = current_account.loggable
+- customer = student.customer
 - srvr = "#{Gutenberg['server']}"
 
 - content_for :toolbox do 
@@ -10,15 +11,18 @@
     = render partial: 'menus/user/account'
     = render partial: 'menus/student/inbox'
     = render partial: 'shared/user/preview'
+    = render partial: 'menus/customer/main', :locals => { customer: customer }
 
 - content_for :modals do
   #modals
     = render partial: 'modals/user/account'
-    = render partial: 'modals/user/purchase'
     = render partial: 'modals/user/upload-scans'
+    = render partial: 'modals/user/ask-a-question'
     = render partial: 'modals/student/enroll'
     = render partial: 'modals/student/enrollment-confirm'
-    = render partial: 'modals/user/ask-a-question'
+    = render partial: 'modals/customer/purchase'
+    = render partial: 'modals/customer/transfer', :locals => { customer: customer }
+    = render partial: 'modals/customer/refund', :locals => { customer: customer }
   #notifications
     = render partial: 'notifications/student/enrollment-blocked'
     = render partial: 'notifications/student/enrolled-already'
@@ -29,8 +33,8 @@
 
 %html{html_attrs}
   %head 
-    = javascript_include_tag "application", "students"
-    %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
+    = javascript_include_tag "application", "students", "customers"
+    -#%script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
     %script{ :type => "text/x-mathjax-config" } 
       MathJax.Hub.Config({
       "HTML-CSS" : {
@@ -47,7 +51,7 @@
       }
       }
       });
-    = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
+    -#= javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
@@ -66,12 +70,12 @@
                   = simple_link :for => "Report Cards", :id => 'lnk-st-rc'
                 %li
                   = simple_link :for => "Inbox", :id => 'lnk-st-inbox'
-                %li.dropdown
-                  = simple_link :for => "Upload", :id => 'lnk-upload'
-                %li.dropdown
-                  = simple_link :for => "Enroll", :id => 'lnk-enroll-self'
                 %li
-                  = simple_link :for => "Buy", :id => 'lnk-buy-credits'
+                  = simple_link :for => "Upload", :id => 'lnk-upload'
+                %li
+                  = simple_link :for => "Enroll", :id => 'lnk-enroll-self'
+                %li.dropdown
+                  = simple_link :for => "Gredit$", :id => 'm-customer-options', :as => :dropdown
                 %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{student.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
@@ -81,13 +85,17 @@
             = render partial: 'students/rc'
           #left-2
             = render partial: 'students/inbox'
+          #left-3
+            = render partial: 'customers/activity'
         #middle.g-panel.span4
           = render partial: 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-1
         #wide.g-panel.span8
           #wide-X
+          #wide-1
+            = render partial: 'customers/transactions'
           #wide-wait
-            = render partial: 'welcome/balance'
+            = render partial: 'toolbox/wait'
 
     = yield :toolbox
     = yield :modals
