Purge pane-grd-questions
Temp fix. Need to generally rationalize behaviour of nopurge-* and purge-* class attributes.
There should be just one of these class attributes set, on either just the tabs
or on just the tab-panes and core/trigger should do the rest

--- a/app/views/shared/grading/_pending.html.haml
+++ b/app/views/shared/grading/_pending.html.haml
@@ -11,7 +11,7 @@
     = simple_link for: 'Grade', id: 'tab-grd-panel', href: '#pane-grd-panel', class: 'nopurge-ever'
 
 .tab-content
-  #pane-grd-exams.tab-pane
-  #pane-grd-questions.tab-pane
+  #pane-grd-exams.tab-pane.purge-blind
+  #pane-grd-questions.tab-pane.purge-blind
   #pane-grd-panel.tab-pane.static
     = render partial: 'shared/grading/rubric'
