renamed menus to make room for institutional customer

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -11,7 +11,7 @@
     = render partial: 'menus/user/account'
     = render partial: 'menus/student/inbox'
     = render partial: 'shared/user/preview'
-    = render partial: 'menus/customer/main', :locals => { customer: customer }
+    = render partial: 'menus/customer/individual', :locals => { customer: customer }
 
 - content_for :modals do
   #modals
