auto trigger activity display

--- a/app/views/customers/_transactions.html.haml
+++ b/app/views/customers/_transactions.html.haml
@@ -1,6 +1,9 @@
-#header
+-#header
   .row-fluid.line.leaf
     .badge.span2= "?"
     .text.span7= "When, What and by Whom?"
     .subtext.span3= "Gredits"
+%ul.nav.nav-tabs.always-on
+  %li
+    = simple_link :for => "Transactions", :href => '#'
 #transactions
