--- a/app/views/customers/_transactions.html.haml
+++ b/app/views/customers/_transactions.html.haml
@@ -3,7 +3,9 @@
     .badge.span2= "?"
     .text.span7= "When, What and by Whom?"
     .subtext.span3= "Gredits"
+
 %ul.nav.nav-tabs.always-on
   %li
     = simple_link :for => "Transactions", :href => '#'
-#transactions
+.tab-content
+  #transactions
