--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -10,13 +10,13 @@
     = render partial: 'menus/user/account'
     - if is_admin
       = render partial: 'menus/examiner/workbench', locals: { is_admin: true } 
-      = render partial: 'menus/admin/customer', locals: { is_admin: true } 
-      = render partial: 'menus/admin/per-customer', locals: { is_admin: true } 
+      = render partial: 'menus/admin/school', locals: { is_admin: true } 
     = render partial: 'menus/user/notifications'
     = render partial: 'examiners/annotation-marks'
     = render partial: 'menus/examiner/blockdb'
     = render partial: 'menus/examiner/per-pending-video'
     = render partial: 'menus/examiner/per-audit'
+    = render partial: 'menus/customer/institutional'
     = render partial: 'shared/user/preview'
     = render partial: 'shared/grading/shadow'
   
@@ -26,11 +26,12 @@
     = render partial: 'modals/examiner/edit'
     = render partial: 'modals/examiner/audit'
     = render partial: 'modals/examiner/upload-video-solution'
-    = render partial: 'modals/admin/create-customer'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
     - if is_admin
       = render partial: 'modals/examiner/new-examiner'
+      = render partial: 'modals/admin/create-school'
+      = render partial: 'modals/customer/invoice'
 
 !!!5
 
@@ -87,7 +88,7 @@
             = render partial: 'examiners/video-pending'
           - if is_admin
             #left-9
-              = render partial: 'admin/mng-customers'
+              = render partial: 'admin/mng-schools'
 
         - if is_admin
           #middle.g-panel.span4
@@ -103,7 +104,7 @@
             #wide-2
               = render partial: 'admin/accounts-in-country'
             #wide-3
-              = render partial: 'admin/customer-overview'
+              = render partial: 'admin/school-overview'
           #wide-X
             = render partial: 'shared/grading/controls'
           #wide-wait
