Allow teachers to set deadlines for existing exams ...
... and not just during the exam building process

--- a/app/views/modals/teacher/_exb_2.html.haml
+++ b/app/views/modals/teacher/_exb_2.html.haml
@@ -2,7 +2,7 @@
 #m-exb-deadlines.modal.fade.wide{ role: :dialog } 
   .row-fluid
     .span2.offset1
-      = image_tag 'notifications/calendar.png'
+      = image_tag 'notifications/calendar-2.png'
     .span8
       %p.title.underline= 'Deadlines' 
       = simple_form_for :deadline, remote: true, defaults: { label: false } do |f|
