--- a/app/views/menus/teacher/_per-ws.html.haml
+++ b/app/views/menus/teacher/_per-ws.html.haml
@@ -9,3 +9,5 @@
     = simple_link for: 'Distribution Scheme', id: 'lnk-def-dist-scheme', icon: 'icon-inbox'
   %li
     = simple_link for: 'Redistribute', id: 'lnk-exam-redistribute', icon: 'icon-repeat'
+  %li
+    = simple_link for: 'Set Deadlines', id: 'lnk-exam-deadlines', icon: 'icon-calendar'
