Enable / disable menu items as per JSON response
Any <a> with a data-update-on can be disabled-if or disabled-unless
some key in the JSON is set

The key used is specified in onclick.yml and factored in by the code
in core/karo.js.coffee

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -267,7 +267,10 @@ span.btn-shortcut {
 
 .navbar-inverse, .dropdown-menu {
   li { 
-    > a { color: white ; }
+    > a{ 
+      color: white ; 
+      &.disabled { color: $lightgray ; } 
+    }
   }
   p.footnote {
     padding: 0px 20px ;
